--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
   <domain-config cleartextTrafficPermitted="true">
     <!-- ✅ Replace with your backend domain -->
-    <domain includeSubdomains="true">backend-app-k52v.onrender.com</domain>
+    <domain includeSubdomains="true">paper-trading-backend-sqllite.onrender.com</domain>
   </domain-config>
 </network-security-config>
