--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,14 @@ body {
 .show-scrollbar::-webkit-scrollbar-track {
   background: rgba(0, 0, 0, 0.08);
 }
+
+@layer base {
+  html {
+    font-family: theme('fontFamily.sans');
+  }
+
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
