--- a/src/index.css
+++ b/src/index.css
@@ -183,3 +183,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
 }
+
+:root{
+  --sat: env(safe-area-inset-top, 0px);
+  --sar: env(safe-area-inset-right, 0px);
+  --sab: env(safe-area-inset-bottom, 0px);
+  --sal: env(safe-area-inset-left, 0px);
+}
