--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-  <domain-config cleartextTrafficPermitted="true">
-    <!-- ✅ Replace with your backend domain -->
-
-    <domain includeSubdomains="true">backend-app-k52v.onrender.com</domain>
-
-    <domain includeSubdomains="true">backend-app-k52v.onrender.com</domain>
-
-  </domain-config>
+  <base-config cleartextTrafficPermitted="true">
+    <trust-anchors>
+      <certificates src="system" />
+      <certificates src="user" />
+    </trust-anchors>
+  </base-config>
 </network-security-config>
